--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
-Django==3.2.6
-Pillow==8.3.1
-asgiref==3.4.1
-autopep8==1.5.4
-coverage==5.3.1
-flake8-django==1.1.1
+appdirs==1.4.4
+asgiref==3.3.1
+black==20.8b1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+coverage==5.4
+Django==3.1.7
+django-js-asset==1.2.2
+django-mptt==0.11.0
+idna==2.10
 isort==5.7.0
-mccabe==0.6.1
-pycodestyle==2.6.0
-pyflakes==2.2.0
-pytz==2020.4
+mypy-extensions==0.4.3
+pathspec==0.8.1
+Pillow==8.1.0
+pytz==2021.1
+regex==2020.11.13
+requests==2.25.1
+six==1.15.0
 sqlparse==0.4.1
-testfixtures==6.17.1
+stripe==2.56.0
 toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+django-debug-toolbar
