--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ regex==2020.11.13
 requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
-stripe==3-0.0.0
+stripe==3.0.0
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
